testsuite/tests/properties/dynvar_missing_binding/test.out
== foo.lkt ==
foo.lkt:18:9: warning: Useless bind of dynamic var 'my_var'
18 |         bind my_var = node;
   |         ^^^^^^^^^^^^^^^^^^

foo.lkt:22:25: error: my_var is not bound in this context: please use the 'bind' construct to bind is first.
22 |     fun p2(): FooNode = my_var
   |                         ^^^^^^


lkt_compile: Done
